/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "GPSLocationData.proto";
import "CompassData.proto";
import "SpeedData.proto";
import "RPMData.proto";
import "OdometerData.proto";
import "FuelLevelData.proto";
import "ParkingBrakeData.proto";
import "GearData.proto";
import "DiagnosticsData.proto";
import "NightModeData.proto";
import "EnvironmentData.proto";
import "HVACData.proto";
import "DrivingStatusData.proto";
import "SteeringWheelData.proto";
import "PassengerData.proto";
import "DoorData.proto";
import "LightData.proto";
import "AccelData.proto";
import "GyroData.proto";

message SensorEventIndication {
  repeated GPSLocation gps_location = 1;
  repeated Compass compass = 2;
  repeated Speed speed = 3;
  repeated RPM rpm = 4;
  repeated Odometer odometer = 5;
  repeated FuelLevel fuel_level = 6;
  repeated ParkingBrake parking_brake = 7;
  repeated Gear gear = 8;
  repeated Diagnostics diagnostics = 9;
  repeated NightMode night_mode = 10;
  repeated Environment enviorment = 11;
  repeated HVAC hvac = 12;
  repeated DrivingStatus driving_status = 13;
  repeated SteeringWheel steering_wheel = 14;
  repeated Passenger passenger = 15;
  repeated Door door = 16;
  repeated Light light = 17;
  repeated Accel accel = 19;
  repeated Gyro gyro = 20;
}
